# PracticeC-

./: c++.md  callback.cpp  init.cpp  lambda.cpp  other.md  rlcvalue.cpp  smart_ptr.cpp  stl.cpp
HightCompute/: Arena.cpp  Arena.h  main.cpp
Poisson_2d/: CMakeLists.txt  run.sh
Poisson_2d/src/: Grid.cpp  Grid.h  Solver.cpp  Solver.h  SparseMatrix.cpp  SparseMatrix.h  main.cpp
case/: asynchronous.cpp  funtion_lambda.cpp
designer/: designer_singleton.h  factory.cpp  main.cpp  note.md  observe.cpp  rule_of_xx.h  strategy.cpp  templateWay.cpp
eda/: CMakeLists.txt  README.md
eda/docs/: architecture.md  grammar.md
eda/examples/: hierarchy.nl  simple.nl
eda/include/mnf/app/: cli.h
eda/include/mnf/common/: diagnostic.h  result.h  source_location.h
eda/include/mnf/elaboration/: elaborator.h  ir.h
eda/include/mnf/lexer/: lexer.h  token.h
eda/include/mnf/output/: json_writer.h  text_writer.h
eda/include/mnf/parser/: ast.h  parser.h
eda/include/mnf/semantic/: semantic_checker.h  symbol_table.h
eda/include/mnf/sim/: combinational_evaluator.h
eda/src/: main.cpp
eda/src/app/: cli.cpp
eda/src/elaboration/: elaborator.cpp  ir.cpp
eda/src/lexer/: lexer.cpp
eda/src/output/: json_writer.cpp  text_writer.cpp
eda/src/parser/: ast.cpp  parser.cpp
eda/src/semantic/: semantic_checker.cpp  symbol_table.cpp
eda/src/sim/: combinational_evaluator.cpp
eda/tests/: elaboration_cycle_test.cpp  elaborator_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_checker_port_consistency_test.cpp  semantic_checker_repeat_ports.cpp  semantic_checker_repeat_wires_test.cpp  semantic_checker_test.cpp  semantic_checker_wire_port_conflict_test.cpp
eda/tests/sim/: combinational_evaluator_test.cpp
hdjt/parse/: CMakeLists.txt  common.h  main.cpp  parser.cpp  parser.h
